# fireworks-pdf-compressor-ml

./: .gitignore  LICENSE  README.md  adaptive_config.py  build_cython_vector_hotspot.py  compress.py  compress.spec  config.py  document_enhancer.py  grayscale.py  gs_pass.py  image_pass.py  measure_stages.py  ml_enhance.py  ml_pipeline.py  pyproject.toml  tiling_pass.py  utils.py  vector_hotspot_cython_nogil.pyx  vector_pass.py
.github/workflows/: build.yml  release.yml
nafdpm/: __init__.py
nafdpm/model/: __init__.py
nafdpm/schedule/: __init__.py  dpm_solver_pytorch.py  schedule.py
